Regression (r232410): StorageTracker.db file gets unlinked while in use https://bugs.webkit.org/show_bug.cgi?id=190795

Reviewed by Chris Dumez.

WK2 stopped using StorageTracker.db file in r232410 and would delete
the file for safety.
It turned out WK1 could use the same file path, so WK2 may delete the
file while WK1 is using it.

* Storage/StorageTracker.cpp:
(WebKit::StorageTracker::trackerDatabasePath):


Canonical link: https://commits.webkit.org/205689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237330 268f45cc-cd09-0410-ab3c-d52691b4dbfc